Added javascript and finished basic calc mechanics of games

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <div class="game-info">
         <h5>Rock Paper Scissors!</h5>
+
     </div>
 
 
@@ -27,6 +28,9 @@
         <button data-key="Enter" class="game-button" id="reset">Reset Game <div class="keypress">Enter</div></button>
         <button data-key=" " class="game-button" id="next">Next Round <div class="keypress">Spacebar</div></button>
     </div>
+
+    <div id = "message" class = "messages">Play against the computer.  First to 5 wins!</div>
+    <div id = "scores" class = "messages">Game Number: 0. Your Score: 0. Computer Score: 0.</div>
 
     <div class="footer">Copyright © 2022 David Earley</div>
 </section>
