--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors Game</title>
-    <script src="javascript.js" defer></script>
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -34,5 +33,7 @@
 
     <div class="footer">Copyright © 2022 David Earley</div>
 </section>
+<script src="javascript.js"></script>
+
 </body>
 </html>
