Consolidated event handling to single function

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="game-info">
         <h5>Rock Paper Scissors!</h5>
-
+        <div class = "RPS">Press any key to start!</div>
     </div>
 
 
@@ -34,6 +34,5 @@
     <div class="footer">Copyright © 2022 David Earley</div>
 </section>
 <script src="javascript.js"></script>
-
 </body>
 </html>
