--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
 
     <div class='game-buttons'>
-        <button data-key="a" class="game-button" id="rock">Rock<div class="keypress">A</div></button>
-        <button data-key="s" class="game-button" id="paper">Paper<div class="keypress">S</div></button>
-        <button data-key="d" class="game-button" id="scissors">Scissors<div id="paper" class="keypress">D</div></button>
+        <button data-key="a" class="game-button hover" id="rock">Rock<div class="keypress">A</div></button>
+        <button data-key="s" class="game-button hover" id="paper">Paper<div class="keypress">S</div></button>
+        <button data-key="d" class="game-button hover" id="scissors">Scissors<div id="paper" class="keypress">D</div></button>
     </div>
 
     <div class = "mechanics">
-        <button data-key="Enter" class="game-button" id="reset">Reset Game <div class="keypress">Enter</div></button>
-        <button data-key=" " class="game-button" id="next">Next Round <div class="keypress">Spacebar</div></button>
+        <button data-key="Shift" class="game-button hover" id="reset">Reset Game <div class="keypress">Shift</div></button>
+        <button data-key="ArrowRight" class="game-button hover" id="next">Next Round <div class="keypress">Right Arrow</div></button>
     </div>
 
     <div id = "message" class = "messages">Play against the computer.  First to 5 wins!</div>
