--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
 
     <div class="footer">Copyright © 2022 David Earley</div>
 </section>
-<script src="javascript.js"></script>
+<script src="javascript.js" type="text/javascript"></script>
 </body>
 </html>
